--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,27 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>CloudCAD</title>
+  <meta charset="UTF-8">
+  <meta
+    name="viewport"
+    content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+  >
+  <meta
+    http-equiv="X-UA-Compatible"
+    content="ie=edge"
+  >
+  <title>CloudCAD</title>
+  <link rel="stylesheet" href="../src/style.scss">
 </head>
 <body>
-<div id="app"></div>
-<script src="../src/index.tsx"></script>
+<div class="container">
+  <div id="model" class="model-container"></div>
+  <div id="code" class="code-container"></div>
+  <form id="cli" class="cli-container">
+    <div id="cli-history" class="cli-history"></div>
+    <input type="text" id="cli-input" class="cli-input">
+  </form>
+</div>
+<script src="../src/index.ts"></script>
 </body>
 </html>
