Added pan and zoom! How exciting!

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,12 @@
       </g>
     </g>
   </svg>
-  <div><input type="text" id="input" class="input"></div>
+  <pre id="output" class="output"></pre>
+  <div>
+    <form id="input">
+      <input type="text" name="input" class="input">
+    </form>
+  </div>
   <script type="module" src="../src/index.ts"></script>
   </div>
 </body>
