Wired up commandlets. Commands are async.

--- a/public/index.html
+++ b/public/index.html
@@ -10,17 +10,15 @@
   <link rel="stylesheet" href="classes.css">
 </head>
 <body>
-  <div class="app">
+<div class="app">
   <svg id="svg" class="svg" xmlns="http://www.w3.org/2000/svg">
-    <line x1="100" y1="100" x2="200" y2="200" class="_0"/>
+    <line x1="100" y1="100" x2="200" y2="200" class="_0" />
   </svg>
   <pre id="output" class="output"></pre>
   <div>
-    <form id="input">
-      <input type="text" name="input" class="input">
-    </form>
+    <input type="text" name="input" class="input" id="input">
   </div>
   <script type="module" src="../src/index.ts"></script>
-  </div>
+</div>
 </body>
 </html>
