CSS and quality of life tweaks for `writeToCLI`.

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
   </svg>
   <pre id="output" class="output"></pre>
   <div>
-    <input type="text" name="input" class="input" id="input">
+    <input type="text" name="input" class="input" id="input" autofocus>
   </div>
   <script type="module" src="../src/index.ts"></script>
 </div>
