Added some kind of crappy cross-hairs.

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,8 @@
   <svg id="svg" class="svg" xmlns="http://www.w3.org/2000/svg">
     <line x1="100" y1="100" x2="200" y2="200" class="_0" />
   </svg>
+  <div id="cursor-y" class="cursor-y"></div>
+  <div id="cursor-x" class="cursor-x"></div>
   <pre id="output" class="output"></pre>
   <div>
     <input type="text" name="input" class="input" id="input" autofocus>
