--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 <body>
 <div class="app">
   <svg id="svg" class="svg" xmlns="http://www.w3.org/2000/svg">
-    <line x1="100" y1="100" x2="200" y2="200" class="_0" vector-effect="non-scaling-stroke" />
+    <line x1="100" y1="100" x2="200" y2="200" class="_0" />
   </svg>
   <div id="cursor-y" class="cursor-y"></div>
   <div id="cursor-x" class="cursor-x"></div>
